# kai-friends-api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
app/: models.py  permissions.py  serializers.py  urls.py  views.py
app/initial_db/: degree.sql  dorms.sql
app/migrations/: 0001_initial.py  0002_alter_userprofile_user.py  0002_userprofile_degree_userprofile_dormitory.py  0003_course.py  0003_profileimage.py  0004_degree.py  0004_major.py  0005_dormitory.py  0005_needs_friendpreference.py  0006_frienddecision.py  0006_userprofile_major.py  0007_remove_userprofile_id_alter_userprofile_user.py  0007_rename_receiver_id_frienddecision_receiver_and_more.py  0008_alter_frienddecision_receiver_decision_and_more.py  0008_dormitory_girl_dormitory_graduate_and_more.py  0009_frienddecision_receiver_decision_and_more.py
app/models/: __init__.py  course.py  degree.py  dormitory.py  friend_decision.py  friend_preference.py  major.py  needs.py  profile_image.py  user_profile.py
app/serializers/: friend_decision.py  user.py  user_profile.py
app/views/: router.py  user.py  user_profile.py
app/views/viewsets/: friend_decision.py  friend_requests.py  friends.py  matching.py  user.py  user_profile.py
kaifriends/: asgi.py  env.py  settings.py  urls.py  wsgi.py
