[tool.poetry]
name = "kaifriends"
version = "0.1.0"
description = ""
authors = ["Jeesoo Yoon <jeesooyoon@kaist.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.5.0"
"backports.zoneinfo" = "0.2.1"
blessings = "1.7"
bpython = "0.22.1"
CacheControl = "0.12.10"
cachy = "0.3.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.12"
cleo = "0.8.1"
clikit = "0.6.2"
crashtest = "0.3.1"
curtsies = "0.3.10"
cwcwidth = "0.1.6"
defusedxml = "0.7.1"
distlib = "0.3.4"
Django = "4.0.2"
djangorestframework = "3.13.1"
filelock = "3.6.0"
greenlet = "1.1.2"
html5lib = "1.1"
httpie = "3.0.2"
idna = "3.3"
importlib-metadata = "4.11.1"
keyring = "23.5.0"
lockfile = "0.12.2"
msgpack = "1.0.3"
multidict = "6.0.2"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.8.2"
platformdirs = "2.5.1"
poetry = "1.1.13"
poetry-core = "1.0.7"
ptyprocess = "0.7.0"
Pygments = "2.11.2"
pylev = "1.4.0"
pyparsing = "3.0.7"
PySocks = "1.7.1"
pytz = "2021.3"
pyxdg = "0.27"
requests = "2.27.1"
requests-toolbelt = "0.9.1"
shellingham = "1.4.0"
six = "1.16.0"
sqlparse = "0.4.2"
tomlkit = "0.10.0"
typing-extensions = "4.1.1"
urllib3 = "1.26.8"
virtualenv = "20.13.2"
webencodings = "0.5.1"
zipp = "3.7.0"
mysqlclient = "^2.1.0"
django-environ = "^0.8.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
